--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
-  "name": "bot",
+  "name": "modguard",
   "version": "1.0.0",
-  "main": "src/index.js",
+  "main": "src/index.ts",
   "license": "MIT",
   "dependencies": {
-    "discord.js": "^14.17.3"
+    "date-fns": "^4.1.0",
+    "discord.js": "^14.17.3",
+    "ts-node-dev": "^2.0.0",
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
+    "@types/node": "^24.0.13",
     "dotenv": "^16.4.7",
-    "nodemon": "^3.1.9"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   },
   "scripts": {
-    "dev": "nodemon ."
+    "dev": "ts-node-dev --respawn --transpile-only ."
   }
 }
