fix: data ignore dev

--- a/data/config.json
+++ b/data/config.json
@@ -7,10 +7,8 @@
   "guildConfigs": {
     "655596814279376898": {
       "logChannelIds": "all",
-      "staffRoles": [
-        "Bot"
-      ],
-      "inactivityThresholdHours": 72,
+      "staffRoles": "all",
+      "inactivityThresholdHours": 24,
       "active": true
     }
   }
