--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
     "typescript": "^5.8.3"
   },
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only ."
+    "dev": "ts-node-dev --ignore-watch data --respawn ."
   }
 }
