--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "typescript": "^5.8.3"
   },
   "scripts": {
-    "dev": "ts-node-dev --ignore-watch data --respawn ."
+    "dev": "ts-node-dev --ignore-watch data --respawn .",
+    "build": "tsc",
+    "start": "node dist/index.js"
   }
 }
